# smart_campus

./: .gitignore.txt
cpp/: Description.txt  README.md
cpp/zyukov/SmartCampus/: CMakeLists.txt  CmakeLists.txt  MakeMe.cmd  MakeMe.sh  ReadMe.txt
cpp/zyukov/SmartCampus/db/: korpus_1.db  settings.json
cpp/zyukov/SmartCampus/include/: Application.h  BuildingTreeItem.h  BuildingTreeModel.h  BuildingWidget.h  BuildingWindow.h  CGenericWidget.h  CampusWidget.h  DbData.h  DbManager.h  DbValueGenerator.h  ElectricalSensor.h  stdafx.h
cpp/zyukov/SmartCampus/resources/: resources.qrc
cpp/zyukov/SmartCampus/sources/: Application.cpp  Building.ui  BuildingTreeItem.cpp  BuildingTreeModel.cpp  BuildingWidget.cpp  BuildingWindow.cpp  CGenericWidget.cpp  CMakeLists.txt  CampusWidget.cpp  CmakeLists.txt  DbData.cpp  DbManager.cpp  DbValueGenerator.cpp  ElectricalSensor.cpp  electricalsensor.ui  main.cpp  mainwindow.ui
web/: README.md
web/backend/smart_campus/: main.py
web/backend/smart_campus/generator/: get_count_rows_in_table.py  main.py  set_random_value_in_electrical_sensors_table.py  settings.json  update_table.py
web/backend/smartkampus/: main.py
web/db/: SmartCampus.sqlite  create_tables.txt  korpus_1.db  mock_data.txt
web/docs/utils/: 01 - Принцип работы генератора.md
web/frontend/smart_campus/: package-lock.json  package.json
web/frontend/smart_campus/public/: index.html
web/frontend/smart_campus/src/: App.css  App.tsx  index.tsx
web/frontend/smart_campus/src/components/Building/: BuildingComponent.tsx
web/frontend/smart_campus/src/components/BuildingsSidebar/: BuildingsSidebar.module.css  BuildingsSidebar.tsx
web/frontend/smart_campus/src/components/ErrorReport/: ErrorReporButton.tsx  ErrorReport.tsx
web/frontend/smart_campus/src/components/Floor/: Floor.module.css  Floor.tsx
web/frontend/smart_campus/src/components/Floors/: Floors.tsx
web/frontend/smart_campus/src/components/GeneratorSettings/: GeneratorSettings.tsx
web/frontend/smart_campus/src/components/ModalWindow/: ModalWindow.module.css  ModalWindow.tsx
web/frontend/smart_campus/src/components/ReportContext/: ReportContext.ts
web/frontend/smart_campus/src/components/ReportProvider/: ReportProvider.tsx
web/frontend/smart_campus/src/components/Room/: Room.css  Room.module.css  RoomComponent.tsx
web/frontend/smart_campus/src/components/Rooms/: Rooms.module.css  RoomsComponent.tsx
web/frontend/smart_campus/src/components/SensorsSidebar/: SensorsSidebar.module.css  SensorsSidebar.tsx
web/frontend/smart_campus/src/components/StatusColor/: StatusColorComponent.module.css  StatusColorComponent.tsx
web/frontend/smart_campus/src/models/: BuildingModel.ts  BuildingSensorsModel.ts  FloorModel.ts  SmartKampusModel.ts  Statuses.ts
web/frontend/smart_campus/src/pages/building/: BuildingPage.tsx
web/utils/generator/: get_count_rows_in_table.py  get_query_for_update.py  main.py  set_random_value_in_electrical_sensors_table.py  settings.json  update_ElectricalSensors_script.sql  update_table.py
(+12 files in other folders)
